0.12.6:
 - add Donate button on README

0.12.4.24:
 - Fixes a packaging problem of the previous release which prevented the 
   installation via easy_install and/or pip (see 
   https://github.com/andreafrancia/trash-cli/issues/5)
 - Fixes the name of the man page for restore-trash.

0.12.4:
 - Reintroduced `trash` command as alias to `trash-put`
 - Now trash-list checks for $topdir/.Trash having sticky bit and not being a
   symlink and warns when these requirements are not met.
 - Now trash-list handles empty, unreadable or malformed .trashinfo
 - Now `trash-emtpy <days>` skips .trashinfos with invalid DeletionDates
 - Removed Unipath dependency
 - Switched from googlecode to github
 - Removed tests written in Bash
 - Complete rewrite of trash-list and trash-empty

0.11.3:
 - Now works also on Mac OS X
 - Fixed #55: restore-trash sets all-write permissions for the destination directory
 - Volumes detection: Now uses "df -P" output as fallback when getmnt fails.
 - Fixed #54. Now restore trash refuses to overwrite a file. Used code adapted from a patch written by Christian.Oudard

0.11.2:
 Fixed #45: Cannot build RPM package with 0.11.1.2

0.11.1.2:
 Fixed problems running setup.py

0.11.1:
 Updated version number to make easy_install happy

0.11.0:
 Fixed serious bug in trash-put: now the dot `.' and dot-dot `..' are skipped.