@@ -1,3 +1,7 @@
+after the 0.12.6:
+ - fixed trash-empty crashed with GetoptError in short_has_arg(): option -2 
+   not recognized (see 
+   https://bugs.launchpad.net/ubuntu/+source/trash-cli/+bug/1015877 )
 0.12.6:
  - add Donate button on README
 
